# RPI_Telemetry

./: CMakeLists.txt  README.md  main  main.cpp
include/: hall_sensor.hpp  mqtt_communication.hpp  readings.hpp  sd_card_save.hpp
src/: hall_sensor.cpp  main.cpp  mqtt_communication.cpp  readings.cpp  sd_card_save.cpp
